cargo-features = ["edition"]

[package]
name = "lightstore-lightning"
version = "0.1.0"
authors = ["Andrew Cann <shum@canndrew.org>"]
edition = "2018"

[dependencies]
futures = "0.1"
tokio = "0.1.7"
unwrap = "1.1"
future-utils = "0.12.0"
byteorder = "1"
sha2 = "0.7.1"
rand = "0.4"
serde = "1.0.73"
serde_derive = "1.0.73"
secp256k1 = { version = "0.11", features = ["rand"] }
chacha20-poly1305-aead = "0.1.2"
failure = "0.1.2"
failure_derive = "0.1.2"
hkdf = "0.6.0"
digest = "0.7.5"
canndrews-misc-ext-traits = { git = "https://github.com/canndrew/canndrews-misc-ext-traits", rev = "1004f05bc0f2e8455e54da9e13c753882f852b58" }
trust-dns-resolver = "0.9.1"
bech32 = "0.5.0"

[dev-dependencies]
hex-literal = "0.1.1"
net-literals = "0.1.2"

