cargo-features = ["edition", "rename-dependency"]

[package]
name = "lightstore"
version = "0.1.0"
authors = ["Andrew Cann <shum@canndrew.org>"]
edition = "2018"

[dependencies]
base16 = "0.1.1"
base32_lib = { version = "0.3.1", package = "base32" }
clap = "2.32.0"
curve25519-dalek = "0.19.0"
ed25519-dalek = "0.7.0"
failure = "0.1.1"
future-utils = "0.12.0"
futures = "0.1.23"
git-remote-helper = { git = "https://github.com/canndrew/git-remote-helper", rev = "1d22818c17b384fd40747daa4005510f0e94e161" }
atomic-arc = { git = "https://github.com/canndrew/atomic-arc", rev = "0f80331159de24d86ef02bd7338cf49258137be0" }
git2 = { version = "0.7.3", default-features = false }
net-literals = "0.1.2"
rand = "0.5.4"
sha2 = "0.7.1"
tempdir = "0.3.7"
tokio = "0.1.7"
trust-dns-resolver = "0.9.0"
unwrap = "1.2.0"
url = "1.7.1"
void = "1.0.2"
x25519-dalek = "0.3.0"
bytes = "0.4.9"
canndrews-misc-ext-traits = { git = "https://github.com/canndrew/canndrews-misc-ext-traits", rev = "1004f05bc0f2e8455e54da9e13c753882f852b58", features = ["futures", "bytes"] }

lightstore-units = { path = "../lightstore-units" }
lightstore-shared-udp-socket = { path = "../lightstore-shared-udp-socket" }

